[gd_scene load_steps=8 format=4 uid="uid://v7g445usx7or"]

[ext_resource type="Script" uid="uid://dqs5tnjh33eto" path="res://scripts/levels/level-3.gd" id="1_wxl1o"]
[ext_resource type="TileSet" uid="uid://dhbkxihst4aan" path="res://assets/art/tile_map/tile_set.tres" id="2_tkmqy"]
[ext_resource type="PackedScene" uid="uid://d2ib3ad831ik1" path="res://scenes/objects/moving-platform.tscn" id="3_smlxm"]
[ext_resource type="PackedScene" uid="uid://dob74cv8susg5" path="res://scenes/objects/frame-portal.tscn" id="5_orn5u"]
[ext_resource type="PackedScene" uid="uid://ckvsvy1qhbian" path="res://scenes/background/parallax-bg-generic.tscn" id="6_tkmqy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smlxm"]
size = Vector2(4, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5sbd"]
size = Vector2(4, 32)

[node name="Level-3" type="Node2D" groups=["levels"]]
script = ExtResource("1_wxl1o")
camera_max = Vector2(192, 282)
spawn_positions = Array[Vector2]([Vector2(32, 48), Vector2(32, 324)])

[node name="Layers" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAEAAAABAAAAAAABAAEAAAACAAAAAAABAAEAAAADAAAAAAABAAEAAAAEAAAAAAABAAIAAAAFAAAAAAABAAIAAAAGAAAAAAABAAIAAAAHAAAAAAABAAIAAAAIAAAAAAABAAIAAAAJAAAAAAABAAIAAAAKAAAAAAABAAIAAAALAAAAAAABAAIAAAAMAAAAAAABAAIAAAANAAAAAAABAAIAAAAOAAAAAAABAAIAAAAPAAAAAAABAAIAAAAQAAAAAAABAAIAAAARAAAAAAABAAIAAAASAAAAAAABAAIAAAATAAAAAAABAAIAAAAUAAAAAAABAAIAAAAVAAAAAAABAAIAAAAWAAAAAAABAAIAAAAXAAAAAAABAAEAAAAXAAQAAAAAAAEAAAAXAAEAAAAAAAEAAAAXAAIAAAAAAAEAAAAXAAMAAAAAAAEAAAAXAAUAAAAAAAEAAAAXAAYAAAAAAAEAAAAXAAcAAAAAAAEAAAAXAAkAAAAAAAEAAAAXAAgAAAAAAAEAAAAXAAoAAAAAAAEAAAAXAAsAAAAAAAEAAAAXAAwAAAAAAAEAAAAFAAUAAAACAAAAAAAFAAYAAAACAAEAAAAFAAcAAAACAAEAAAAFAAgAAAACAAEAAAAFAAkAAAACAAEAAAAFAAoAAAACAAEAAAAFAAsAAAACAAEAAAAFAAwAAAACAAEAAAAEAAwAAAABAAEAAAADAAwAAAABAAEAAAACAAwAAAABAAEAAAABAAwAAAABAAEAAAABAAsAAAABAAEAAAAAAAsAAAABAAEAAAAAAAwAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAEAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAEAAAACAAcAAAABAAEAAAACAAgAAAABAAEAAAADAAkAAAABAAEAAAADAAoAAAABAAEAAAAEAAsAAAABAAEAAAADAAYAAAABAAEAAAACAAYAAAABAAEAAAADAAcAAAABAAEAAAACAAUAAAABAAAAAAADAAUAAAABAAAAAAAEAAYAAAABAAEAAAAEAAUAAAABAAAAAAAEAAcAAAABAAEAAAAEAAgAAAABAAEAAAAEAAkAAAABAAEAAAADAAsAAAABAAEAAAADAAgAAAABAAEAAAAEAAoAAAABAAEAAAACAAsAAAABAAEAAAACAAoAAAABAAEAAAACAAkAAAABAAEAAAABAAkAAAABAAEAAAABAAoAAAABAAEAAAABAAgAAAABAAEAAAABAAcAAAABAAEAAAAAAA0AAAABAAEAAAABAA0AAAABAAEAAAACAA0AAAABAAEAAAADAA0AAAABAAEAAAAEAA0AAAABAAEAAAAFAA0AAAACAAEAAAAFAA4AAAACAAEAAAAFAA8AAAACAAEAAAAFABAAAAACAAEAAAAFABEAAAACAAEAAAAFABIAAAACAAIAAAAAABIAAAABAAIAAAAAABEAAAABAAEAAAAAABAAAAABAAEAAAAAAA8AAAABAAEAAAAAAA4AAAABAAEAAAABAA4AAAABAAEAAAABAA8AAAABAAEAAAABABAAAAABAAEAAAABABEAAAABAAEAAAABABIAAAABAAIAAAACAA8AAAABAAEAAAACABAAAAABAAEAAAACABEAAAABAAEAAAADABIAAAABAAIAAAAEABIAAAABAAIAAAAEABEAAAABAAEAAAAEABAAAAABAAEAAAAEAA8AAAABAAEAAAAEAA4AAAABAAEAAAADAA8AAAABAAEAAAADABAAAAABAAEAAAADABEAAAABAAEAAAACABIAAAABAAIAAAADAA4AAAABAAEAAAACAA4AAAABAAEAAAAXABUAAAABAAEAAAAXABQAAAAAAAEAAAAXABMAAAAAAAEAAAAXABIAAAAAAAEAAAAXABEAAAAAAAEAAAAXABAAAAAAAAEAAAAXAA8AAAAAAAEAAAAXAA4AAAAAAAEAAAAXAA0AAAAAAAEAAAAXABYAAAABAAEAAAAWABYAAAABAAEAAAAVABYAAAABAAEAAAAUABYAAAABAAEAAAATABYAAAABAAEAAAASABYAAAABAAEAAAASABcAAAABAAEAAAATABcAAAABAAEAAAAUABcAAAABAAEAAAAVABcAAAABAAEAAAAWABcAAAABAAEAAAAXABcAAAABAAEAAAAXABgAAAABAAEAAAAWABgAAAABAAEAAAAVABgAAAABAAEAAAAUABgAAAABAAEAAAATABgAAAABAAEAAAASABgAAAABAAEAAAARABgAAAABAAEAAAAQABgAAAABAAEAAAAPABgAAAABAAEAAAAOABgAAAABAAEAAAANABgAAAABAAEAAAAMABgAAAABAAEAAAALABgAAAABAAEAAAAKABgAAAABAAEAAAAJABgAAAABAAEAAAAIABgAAAABAAEAAAAHABgAAAABAAEAAAAGABgAAAABAAEAAAAFABgAAAABAAEAAAAEABgAAAABAAEAAAADABgAAAABAAEAAAACABgAAAABAAEAAAABABgAAAABAAEAAAAAABgAAAABAAEAAAAJABYAAAABAAEAAAAJABcAAAABAAEAAAAIABYAAAABAAEAAAAIABcAAAABAAEAAAAIABUAAAABAAAAAAAJABUAAAACAAAAAAASABUAAAAAAAAAAAATABUAAAABAAAAAAAUABUAAAABAAAAAAAVABUAAAABAAAAAAAWABUAAAABAAAAAAAHABcAAAABAAEAAAAHABYAAAABAAEAAAAHABUAAAABAAAAAAAGABUAAAABAAAAAAAFABUAAAABAAAAAAAFABYAAAABAAEAAAAGABYAAAABAAEAAAAGABcAAAABAAEAAAAEABYAAAABAAEAAAAEABcAAAABAAEAAAAFABcAAAABAAEAAAAEABUAAAABAAAAAAADABUAAAABAAAAAAACABUAAAABAAAAAAABABUAAAABAAAAAAAAABUAAAABAAAAAAAAABYAAAABAAEAAAAAABcAAAABAAEAAAABABcAAAABAAEAAAACABcAAAABAAEAAAADABcAAAABAAEAAAADABYAAAABAAEAAAACABYAAAABAAEAAAABABYAAAABAAEAAAAAAAEAAAABAAIAAAABAAEAAAABAAIAAAACAAEAAAABAAIAAAADAAEAAAACAAIAAAAKABcAAAAEAAAAAAALABcAAAAEAAAAAAAMABcAAAAEAAAAAAANABcAAAAEAAAAAAAOABcAAAAEAAAAAAAPABcAAAAEAAAAAAAQABcAAAAEAAAAAAARABcAAAAEAAAAAAA=")
tile_set = ExtResource("2_tkmqy")

[node name="Exits" type="Node2D" parent="."]

[node name="Exit1" type="Area2D" parent="Exits"]
position = Vector2(2, 56)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exits/Exit1"]
shape = SubResource("RectangleShape2D_smlxm")

[node name="Exit2" type="Area2D" parent="Exits"]
position = Vector2(2, 320)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exits/Exit2"]
shape = SubResource("RectangleShape2D_x5sbd")

[node name="Moving-platform" parent="." instance=ExtResource("3_smlxm")]
position = Vector2(129, 68)
speed = 1.846
destination = Vector2(200, 0)

[node name="Moving-platform2" parent="." instance=ExtResource("3_smlxm")]
position = Vector2(329, 128)
speed = 1.846
destination = Vector2(-200, 0)

[node name="Moving-platform3" parent="." instance=ExtResource("3_smlxm")]
position = Vector2(129, 191)
speed = 1.846
destination = Vector2(200, 0)

[node name="Moving-platform4" parent="." instance=ExtResource("3_smlxm")]
position = Vector2(329, 264)
speed = 1.846
destination = Vector2(-200, 0)

[node name="UpperPortal" parent="." instance=ExtResource("5_orn5u")]
position = Vector2(80, 32)

[node name="DestinationPoint" parent="UpperPortal" index="1"]
position = Vector2(140, 306)

[node name="InactivePortal" parent="UpperPortal" index="2"]
visible = false

[node name="LowerPortal" parent="." instance=ExtResource("5_orn5u")]
position = Vector2(220, 317)

[node name="DestinationPoint" parent="LowerPortal" index="1"]
position = Vector2(-140, -263)

[node name="InactivePortal" parent="LowerPortal" index="2"]
visible = false

[node name="Parallax-bg-generic" parent="." instance=ExtResource("6_tkmqy")]

[connection signal="body_entered" from="Exits/Exit1" to="." method="_on_exit_1_body_entered"]
[connection signal="body_entered" from="Exits/Exit2" to="." method="_on_exit_2_body_entered"]

[editable path="UpperPortal"]
[editable path="LowerPortal"]
